--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
+aiosmtplib==3.0.2
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
 bcrypt==4.0.1
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 click==8.1.8
@@ -10,21 +12,28 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.8
 fastapi-cli==0.0.7
+fastapi-mail==1.4.2
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-passlib==1.7.4
+packaging==24.2
+pluggy==1.5.0
 pycparser==2.22
 pydantic==2.10.6
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
+pytest==8.3.4
+pytest-asyncio==0.25.3
+pytest-mock==3.14.0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
